--- a/Python/Exercises/Blatt-01-David.ipynb
+++ b/Python/Exercises/Blatt-01-David.ipynb
@@ -63,20 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def echteTeiler(n):\n",
     "    'Diese Funktion berechnet die Menge aller echten Teiler der Zahl n.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return { x for x in range(1, n) if n % x == 0 }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "echteTeiler(6)"
    ]
@@ -92,22 +105,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def isPerfect(n):\n",
     "    'Returns True if n is perfect, else False.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    teiler = echteTeiler(n)\n",
+    "    \n",
+    "    return sum(teiler) == n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "isPerfect(6)"
+    "isPerfect(28)"
    ]
   },
   {
@@ -119,13 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def perfectNumbers(n):\n",
     "    'This function computes the set of all perfect numbers less than n.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return { x for x in range(1, n) if isPerfect(x) }"
    ]
   },
   {
@@ -137,18 +167,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "perfectNumbers(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6, 28, 496, 8128}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "perfectNumbers(10000)"
    ]
@@ -170,13 +222,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 6}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def teiler(n):\n",
     "    'This function computes the set of all natural number that divide n.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return { x for x in range(1, n+1) if n % x == 0 }\n",
+    "    \n",
+    "teiler(6)"
    ]
   },
   {
@@ -194,15 +261,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def gt(m, n):\n",
     "    '''This function calculates the set of numbers that \n",
     "       are divisors of both m and n.\n",
     "    '''   \n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return teiler(m) & teiler(n)\n",
+    "\n",
+    "gt(3, 6)"
    ]
   },
   {
@@ -216,13 +298,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def ggt(m, n):\n",
     "    'This function return the greatest common divisor of m and n.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return max(gt(m, n))\n",
+    "    \n",
+    "ggt(4, 8)"
    ]
   },
   {
@@ -242,13 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def kgv(m, n):\n",
     "    'This function return the smallest common multiple of m and n.'\n",
-    "    'your code here'"
+    "    'your code here'\n",
+    "    \n",
+    "    return min({ x for x in range(m, n*m+1) if x % m == 0 } & { x for x in range(n, n*m+1) if x % n == 0 })\n",
+    "\n",
+    "kgv(4, 8)"
    ]
   },
   {
@@ -268,6 +380,38 @@
     "\n",
     "**Hinweis**:  Versuchen Sie, die Funktion  $\\texttt{subsets}(M, k)$ rekursiv \n",
     "durch Rekursion nach $k$ zu implementieren.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{frozenset({1, 6}), frozenset({3, 6}), frozenset({1, 3})}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def subsets(M, k):\n",
+    "    if k == 0:\n",
+    "        return { frozenset() }\n",
+    "    sub = subsets(M, k-1)\n",
+    "    return { y|{x} for x in M\n",
+    "                    for y in sub\n",
+    "                   if x not in y }\n",
+    "\n",
+    "a = { frozenset() }\n",
+    "{ y|{x} for y in a\n",
+    "    for x in { 1, 2 }}\n",
+    "\n",
+    "subsets({ 1, 3, 6 }, 2)"
    ]
   },
   {
@@ -305,12 +449,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(3, 4, 5),\n",
+       " (5, 12, 13),\n",
+       " (6, 8, 10),\n",
+       " (7, 24, 25),\n",
+       " (8, 15, 17),\n",
+       " (9, 12, 15),\n",
+       " (9, 40, 41),\n",
+       " (10, 24, 26),\n",
+       " (12, 16, 20),\n",
+       " (12, 35, 37),\n",
+       " (14, 48, 50),\n",
+       " (15, 20, 25),\n",
+       " (15, 36, 39),\n",
+       " (16, 30, 34),\n",
+       " (18, 24, 30),\n",
+       " (20, 21, 29),\n",
+       " (21, 28, 35),\n",
+       " (24, 32, 40),\n",
+       " (27, 36, 45),\n",
+       " (30, 40, 50)}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pythagoras(n):\n",
-    "    \"your code here\""
+    "    \"your code here\"\n",
+    "    return { (a, b, c) for c in range(1, n+1)\n",
+    "                for a in range(1, c+1)\n",
+    "                for b in range(1, c+1)\n",
+    "                if c**2 == a**2 + b**2 and a < b }\n",
+    "\n",
+    "pythagoras(50)"
    ]
   },
   {
@@ -327,12 +507,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def isReduced(a, b, c):\n",
-    "    \"your code here\""
+    "    \"your code here\"\n",
+    "    \n",
+    "    return a**2 + b**2 == c**2 and ggt(a,b) == 1 and ggt(a,c) == 1 and ggt(b,c) == 1\n",
+    "\n",
+    "isReduced(6, 8, 10) #isReduced(3, 4, 5)"
    ]
   },
   {
@@ -347,19 +542,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reducedPythagoras(n):\n",
-    "    \"your code here\""
+    "    \"your code here\"\n",
+    "    \n",
+    "    return { (a, b, c) for (a, b, c) in pythagoras(n) if isReduced(a, b, c) }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(3, 4, 5),\n",
+       " (5, 12, 13),\n",
+       " (7, 24, 25),\n",
+       " (8, 15, 17),\n",
+       " (9, 40, 41),\n",
+       " (12, 35, 37),\n",
+       " (20, 21, 29)}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reducedPythagoras(50)"
    ]
@@ -392,10 +606,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11785714285714285"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Values = { '2', '3', '4', '5', '6', '7', '8', '9', 'T', \n",
+    "           'J', 'Q', 'K', 'A' \n",
+    "         }\n",
+    "\n",
+    "Suits = { '♣', '♥', '♦', '♠' }\n",
+    "\n",
+    "Deck = { (v, s) for v in Values for s in Suits }\n",
+    "\n",
+    "Hole = { ('8', '♠'), ('9', '♠') }\n",
+    "\n",
+    "Rest = Deck - Hole\n",
+    "\n",
+    "Flops = { (c1, c2, c3) for c1 in Rest \n",
+    "                       for c2 in Rest \n",
+    "                       for c3 in Rest \n",
+    "                       if len({c1, c2, c3}) == 3 \n",
+    "        }\n",
+    "\n",
+    "Trips = { (c1, c2, c3) for (c1, c2, c3) in Flops if len(list(filter(lambda x: x == '♠', [ c1[1], c2[1], c3[1] ]))) >= 2 }\n",
+    "Trips1 = { (c1, c2, c3) for (c1, c2, c3) in Flops if len(list(filter(lambda x: x == '♠', [ c1[1], c2[1], c3[1] ]))) == 3 }\n",
+    "#Trips = { (c1, c2, c3) for (c1, c2, c3) in Flops if 2 <= len({ c1[1], c2[1], c3[1] } & { '♠' }) <= 3 }\n",
+    "\n",
+    "Trips\n",
+    "\n",
+    "len(Trips)/len(Flops)\n",
+    "#len(Trips1)/len(Flops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,12 +672,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Tse', 'seT', 'esT'}\n"
+     ]
+    }
+   ],
    "source": [
     "def anagram(s):\n",
-    "    \"your code here\""
+    "    if len(s) < 2:\n",
+    "        return s\n",
+    "    else:\n",
+    "        return { s[x]+y for x in range(len(s))\n",
+    "                            for y in anagram(s[:x] + s[x+1:])\n",
+    "                               if s[x]+y != s }\n",
+    "\n",
+    "print(anagram(\"Tes\"))"
    ]
   },
   {
@@ -453,12 +720,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "1\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 1, 3), (1, 2, 2), (1, 3, 1), (2, 1, 2), (2, 2, 1), (3, 1, 1)}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def numberDiceRolls(n, s):\n",
-    "    \"your code here\""
+    "def echteAddierer(n):\n",
+    "    return { (x, y) for x in range(1, n)\n",
+    "                       for y in range(1, n)\n",
+    "                           if x + y == n }\n",
+    "    \n",
+    "def possibleDicerolls(n, s):\n",
+    "    if n == 1:\n",
+    "        return { (s, ) }\n",
+    "    \n",
+    "    if n == 2:\n",
+    "        initialResult = echteAddierer(s)\n",
+    "\n",
+    "        return initialResult\n",
+    "    \n",
+    "    subPossibleDicerolls = possibleDicerolls(n-1, s)\n",
+    "    \n",
+    "    result = { x[0:y] + z + x[y+1::]\n",
+    "                for x in subPossibleDicerolls\n",
+    "                for y in range(len(x))\n",
+    "                for z in echteAddierer(x[y]) }\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def numberDiceRolls(n, s):    \n",
+    "    return len(possibleDicerolls(n, s))\n",
+    "\n",
+    "print(numberDiceRolls(3, 5))\n",
+    "print(numberDiceRolls(1, 5))\n",
+    "print(numberDiceRolls(2, 1))\n",
+    "\n",
+    "possibleDicerolls(3, 5)"
    ]
   },
   {
