--- a/Python/Exercises/Blatt-01-David.ipynb
+++ b/Python/Exercises/Blatt-01-David.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "{frozenset({1, 6}), frozenset({3, 6}), frozenset({1, 3})}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,10 +407,6 @@
     "                    for y in sub\n",
     "                   if x not in y }\n",
     "\n",
-    "a = { frozenset() }\n",
-    "{ y|{x} for y in a\n",
-    "    for x in { 1, 2 }}\n",
-    "\n",
     "subsets({ 1, 3, 6 }, 2)"
    ]
   },
@@ -421,6 +417,44 @@
     "Geben Sie eine Implementierung der Funktion `power` an, bei der Sie die \n",
     "Funktion `subsets` verwenden.  Für eine Menge $M$ soll die Funktion \n",
     "$\\texttt{power}(M)$ die Potenz-Menge $2^M$ berechnen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{frozenset(),\n",
+       " frozenset({3}),\n",
+       " frozenset({1}),\n",
+       " frozenset({6}),\n",
+       " frozenset({3, 6}),\n",
+       " frozenset({1, 3}),\n",
+       " frozenset({1, 6}),\n",
+       " frozenset({1, 3, 6})}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def powerHelper(M, k):\n",
+    "    if k == 0:\n",
+    "        return { frozenset() }\n",
+    "    \n",
+    "    subPowerHelper = powerHelper(M, k-1)\n",
+    "    \n",
+    "    return subPowerHelper | subsets(M, k)\n",
+    "\n",
+    "def power(M):\n",
+    "    return powerHelper(M, len(M))\n",
+    "\n",
+    "power({ 1, 3, 6 })"
    ]
   },
   {
@@ -449,35 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(3, 4, 5),\n",
-       " (5, 12, 13),\n",
-       " (6, 8, 10),\n",
-       " (7, 24, 25),\n",
-       " (8, 15, 17),\n",
-       " (9, 12, 15),\n",
-       " (9, 40, 41),\n",
-       " (10, 24, 26),\n",
-       " (12, 16, 20),\n",
-       " (12, 35, 37),\n",
-       " (14, 48, 50),\n",
-       " (15, 20, 25),\n",
-       " (15, 36, 39),\n",
-       " (16, 30, 34),\n",
-       " (18, 24, 30),\n",
-       " (20, 21, 29),\n",
-       " (21, 28, 35),\n",
-       " (24, 32, 40),\n",
-       " (27, 36, 45),\n",
-       " (30, 40, 50)}"
+       "{(3, 4, 5), (5, 12, 13), (6, 8, 10), (8, 15, 17), (9, 12, 15), (12, 16, 20)}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +505,7 @@
     "                for b in range(1, c+1)\n",
     "                if c**2 == a**2 + b**2 and a < b }\n",
     "\n",
-    "pythagoras(50)"
+    "pythagoras(20)"
    ]
   },
   {
@@ -606,16 +621,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11785714285714285"
+       "0.008418367346938776"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +661,7 @@
     "Trips\n",
     "\n",
     "len(Trips)/len(Flops)\n",
-    "#len(Trips1)/len(Flops)"
+    "len(Trips1)/len(Flops)"
    ]
   },
   {
@@ -672,27 +687,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Tse', 'seT', 'esT'}\n"
+      "{'kosk', 'kkos', 'skko', 'skok', 'ksok', 'oksk', 'ksko', 'sokk', 'oskk', 'okks', 'kkso'}\n"
      ]
     }
    ],
    "source": [
-    "def anagram(s):\n",
+    "def anagramHelper(s):\n",
     "    if len(s) < 2:\n",
-    "        return s\n",
+    "        return { s }\n",
     "    else:\n",
     "        return { s[x]+y for x in range(len(s))\n",
-    "                            for y in anagram(s[:x] + s[x+1:])\n",
-    "                               if s[x]+y != s }\n",
+    "                            for y in anagramHelper(s[:x] + s[x+1:]) }\n",
     "\n",
-    "print(anagram(\"Tes\"))"
+    "def anagram(s):\n",
+    "    return { x for x in anagramHelper(s)\n",
+    "                if x != s }\n",
+    "    \n",
+    "print(anagram(\"koks\"))"
    ]
   },
   {
@@ -720,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +747,8 @@
      "text": [
       "6\n",
       "1\n",
-      "0\n"
+      "0\n",
+      "4\n"
      ]
     },
     {
@@ -738,7 +757,7 @@
        "{(1, 1, 3), (1, 2, 2), (1, 3, 1), (2, 1, 2), (2, 2, 1), (3, 1, 1)}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,17 +769,15 @@
     "                           if x + y == n }\n",
     "    \n",
     "def possibleDicerolls(n, s):\n",
+    "    if s > n * 6:\n",
+    "        return set()\n",
+    "    \n",
     "    if n == 1:\n",
     "        return { (s, ) }\n",
     "    \n",
-    "    if n == 2:\n",
-    "        initialResult = echteAddierer(s)\n",
-    "\n",
-    "        return initialResult\n",
-    "    \n",
     "    subPossibleDicerolls = possibleDicerolls(n-1, s)\n",
     "    \n",
-    "    result = { x[0:y] + z + x[y+1::]\n",
+    "    result = { x[0:y] + z + x[y+1:]\n",
     "                for x in subPossibleDicerolls\n",
     "                for y in range(len(x))\n",
     "                for z in echteAddierer(x[y]) }\n",
@@ -773,6 +790,7 @@
     "print(numberDiceRolls(3, 5))\n",
     "print(numberDiceRolls(1, 5))\n",
     "print(numberDiceRolls(2, 1))\n",
+    "print(numberDiceRolls(4, 5))\n",
     "\n",
     "possibleDicerolls(3, 5)"
    ]
