Added group attempt for Blatt-02

--- a/Python/Exercises/Blatt-01-David.ipynb
+++ b/Python/Exercises/Blatt-01-David.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,13 +873,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2, 3), (1, 3, 2), (2, 1, 3), (2, 3, 1), (3, 1, 2), (3, 2, 1)}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "def permutationHelper(n, originalN):\n",
+    "    if n <= 1:\n",
+    "        return { (x, ) for x in range(1, originalN+1) }\n",
+    "    \n",
+    "    subAllPermutations = permutationHelper(n-1, originalN)\n",
+    "    return { y + (x,) for x in range(1, originalN+1)\n",
+    "                       for y in subAllPermutations\n",
+    "                           if x not in y }\n",
+    "\n",
     "def allPermutations(n):\n",
     "    'This function returns the set of all permutations of length n.'\n",
-    "    \"your code here\""
+    "    return permutationHelper(n, n)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "allPermutations(3)"
    ]
   },
   {
@@ -908,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,20 +940,81 @@
     "    '''This function sorts the elements of the list L and returns \n",
     "       the resulting list.\n",
     "    '''\n",
-    "    \"your code here\""
+    "    \n",
+    "    if (len(L) <= 1):\n",
+    "        return L\n",
+    "    \n",
+    "    copyOfL = list(L)\n",
+    "    \n",
+    "    y = copyOfL.pop()\n",
+    "    \n",
+    "    sortedCopyOfL = sort(copyOfL)\n",
+    "    \n",
+    "    return insert(y, sortedCopyOfL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 3, 5, 8], [1, 2, 3])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def insert(x, L):\n",
     "    '''This function inserts the number x into the sorted list L such that\n",
     "       the resulting list is sorted, too.\n",
-    "    '''"
+    "    '''\n",
+    "    \n",
+    "    if len(L) == 0:\n",
+    "        return [ x ]\n",
+    "    \n",
+    "    copyOfL = list(L)\n",
+    "    \n",
+    "    y = copyOfL.pop(0)\n",
+    "    \n",
+    "    subInsert = insert(x, copyOfL)\n",
+    "    \n",
+    "    return [ z for z in subInsert if z < y ] + [y] + [ z for z in subInsert if z >= y ]\n",
+    "    \n",
+    "insert(1, [3, 5, 8]), insert(2, [1, 3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 3, 5, 8], [1, 3, 3, 4, 10])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort([3, 5, 8, 1]), sort([1, 4, 3, 3, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
