Small changes in TestDavid1

--- a/Python/TestDavid1.ipynb
+++ b/Python/TestDavid1.ipynb
@@ -357,12 +357,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'∀'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'\\N{for All}'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def prime"
-   ]
+   "source": []
   }
  ],
  "metadata": {
