Small changes in TestDavid1

--- a/Python/TestDavid1.ipynb
+++ b/Python/TestDavid1.ipynb
@@ -377,6 +377,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('f', 'f', 'f'),\n",
+       " ('f', 'f', 'w'),\n",
+       " ('f', 'w', 'f'),\n",
+       " ('f', 'w', 'w'),\n",
+       " ('w', 'f', 'f'),\n",
+       " ('w', 'f', 'w'),\n",
+       " ('w', 'w', 'f'),\n",
+       " ('w', 'w', 'w')}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combinations(n):\n",
+    "    if n < 1:\n",
+    "        return set()\n",
+    "    if n == 1:\n",
+    "        return { ('w', ), ('f', ) }\n",
+    "    subComb = combinations(n-1)\n",
+    "    return { x+(y,) for x in subComb \n",
+    "                for y in { 'w', 'f' } }\n",
+    "\n",
+    "#Amount of elements per Tuple\n",
+    "combinations(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
