--- a/Python/CNF-David.ipynb
+++ b/Python/CNF-David.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (a → b) ↔ (¬a ∧ ¬b) is:\n",
-      "{{('¬', 'b')}, {('¬', 'b'), 'a'}, {('¬', 'b'), ('¬', 'a')}}\n"
+      "{{('¬', 'a'), ('¬', 'b')}, {('¬', 'b'), 'a'}, {('¬', 'b')}}\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (p ∧ q → r) ∨ ¬r → ¬p is:\n",
-      "{{'q', ('¬', 'p')}, {'r', ('¬', 'p')}, {('¬', 'r'), ('¬', 'p')}}\n"
+      "{{('¬', 'p'), ('¬', 'r')}, {('¬', 'p'), 'q'}, {('¬', 'p'), 'r'}}\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (p → q) ↔ (¬p → ¬q) is:\n",
-      "{{'q', ('¬', 'p')}, {('¬', 'q'), 'p'}}\n"
+      "{{('¬', 'p'), 'q'}, {('¬', 'q'), 'p'}}\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
      "output_type": "stream",
      "text": [
       "The knf of p ∨ q → r is:\n",
-      "{{'r', ('¬', 'p')}, {('¬', 'q'), 'r'}}\n"
+      "{{('¬', 'q'), 'r'}, {('¬', 'p'), 'r'}}\n"
      ]
     }
    ],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -601,12 +601,71 @@
      "output_type": "stream",
      "text": [
       "The knf of p ∨ q ↔ r is:\n",
-      "{{'r', ('¬', 'p')}, {('¬', 'q'), 'r'}, {'p', 'q', ('¬', 'r')}}\n"
+      "{{'p', ('¬', 'r'), 'q'}, {('¬', 'q'), 'r'}, {('¬', 'p'), 'r'}}\n"
      ]
     }
    ],
    "source": [
     "test('p ∨ q ↔ r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('→',\n",
+       " ('∧', ('∨', ('∨', 'p', 'q'), 'r'), ('∨', 'z', ('¬', 'r'))),\n",
+       " ('∨', ('∨', 'p', 'q'), 'z'))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = plp.LogicParser('(p ∨ q ∨ r) ∧ (z ∨ ¬r) → p ∨ q ∨ z').parse()\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The knf of (p ∨ q ∨ r) ∧ (z ∨ ¬r) → p ∨ q ∨ z is:\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test('(p ∨ q ∨ r) ∧ (z ∨ ¬r) → p ∨ q ∨ z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The knf of p ∨ ¬p is:\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test('p ∨ ¬p')"
    ]
   },
   {
