--- a/Python/CNF-David.ipynb
+++ b/Python/CNF-David.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (a → b) ↔ (¬a ∧ ¬b) is:\n",
-      "{{('¬', 'a'), ('¬', 'b')}, {('¬', 'b'), 'a'}, {('¬', 'b')}}\n"
+      "{{'a', ('¬', 'b')}, {('¬', 'b')}, {('¬', 'b'), ('¬', 'a')}}\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (p ∧ q → r) ∨ ¬r → ¬p is:\n",
-      "{{('¬', 'p'), ('¬', 'r')}, {('¬', 'p'), 'q'}, {('¬', 'p'), 'r'}}\n"
+      "{{'r', ('¬', 'p')}, {('¬', 'r'), ('¬', 'p')}, {'q', ('¬', 'p')}}\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (p → q) ↔ (¬p → ¬q) is:\n",
-      "{{('¬', 'p'), 'q'}, {('¬', 'q'), 'p'}}\n"
+      "{{('¬', 'q'), 'p'}, {'q', ('¬', 'p')}}\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
      "output_type": "stream",
      "text": [
       "The knf of p ∨ q → r is:\n",
-      "{{('¬', 'q'), 'r'}, {('¬', 'p'), 'r'}}\n"
+      "{{'r', ('¬', 'q')}, {'r', ('¬', 'p')}}\n"
      ]
     }
    ],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
      "output_type": "stream",
      "text": [
       "The knf of p ∨ q ↔ r is:\n",
-      "{{'p', ('¬', 'r'), 'q'}, {('¬', 'q'), 'r'}, {('¬', 'p'), 'r'}}\n"
+      "{{'r', ('¬', 'q')}, {'r', ('¬', 'p')}, {'q', ('¬', 'r'), 'p'}}\n"
      ]
     }
    ],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        " ('∨', ('∨', 'p', 'q'), 'z'))"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -666,6 +666,44 @@
    ],
    "source": [
     "test('p ∨ ¬p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The knf of ¬r ∧ (q ∨ p → r) → ¬q ∧ ¬p is:\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test('¬r ∧ (q ∨ p → r) → ¬q ∧ ¬p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{frozenset({'c', 'a', 'b'})}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def atLeastOne(M):\n",
+    "    return { frozenset(M) }\n",
+    "\n",
+    "print(atLeastOne({'a', 'b', 'c'}))"
    ]
   },
   {
