--- a/Python/CNF-David.ipynb
+++ b/Python/CNF-David.ipynb
@@ -1,133 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700,400italic,700italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "@font-face {\n",
-       "    font-family: \"Computer Modern\";\n",
-       "    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
-       "}\n",
-       "\n",
-       ".container { width: 100% }\n",
-       "\n",
-       "/* Formatting for header cells */\n",
-       ".text_cell_render h1 {\n",
-       "    font-family: 'Philosopher', sans-serif;\n",
-       "    font-weight: 400;\n",
-       "    font-size: 2.2em;\n",
-       "    line-height: 100%;\n",
-       "    color: rgb(0, 80, 120);\n",
-       "    margin-bottom: 0.1em;\n",
-       "    margin-top: 0.1em;\n",
-       "    display: block;\n",
-       "}\t\n",
-       ".text_cell_render h2 {\n",
-       "    font-family: 'Philosopher', serif;\n",
-       "    font-weight: 400;\n",
-       "    font-size: 1.9em;\n",
-       "    line-height: 100%;\n",
-       "    color: rgb(200,100,0);\n",
-       "    margin-bottom: 0.1em;\n",
-       "    margin-top: 0.1em;\n",
-       "    display: block;\n",
-       "}\t\n",
-       "\n",
-       ".text_cell_render h3 {\n",
-       "    font-family: 'Philosopher', serif;\n",
-       "    margin-top:12px;\n",
-       "    margin-bottom: 3px;\n",
-       "    font-style: italic;\n",
-       "    color: rgb(94,127,192);\n",
-       "}\n",
-       "\n",
-       ".text_cell_render h4 {\n",
-       "    font-family: 'Philosopher', serif;\n",
-       "}\n",
-       "\n",
-       ".text_cell_render h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "    font-weight: 300;\n",
-       "    font-size: 16pt;\n",
-       "    color: grey;\n",
-       "    font-style: italic;\n",
-       "    margin-bottom: .1em;\n",
-       "    margin-top: 0.1em;\n",
-       "    display: block;\n",
-       "}\n",
-       "\n",
-       ".text_cell_render h6 {\n",
-       "    font-family: 'PT Mono', sans-serif;\n",
-       "    font-weight: 300;\n",
-       "    font-size: 10pt;\n",
-       "    color: grey;\n",
-       "    margin-bottom: 1px;\n",
-       "    margin-top: 1px;\n",
-       "}\n",
-       "\n",
-       ".text_cell_render em {\n",
-       "    font-family: 'Philosopher', sans-serif;\n",
-       "    color:        blue;\n",
-       "    background-color: rgb(255,220,180);\n",
-       "    font-size:    110%;\n",
-       "    margin-left:   2px;\n",
-       "    margin-right:  2px;\n",
-       "    font-weight:   100;\n",
-       "}\n",
-       "\n",
-       ".text_cell_render b {\n",
-       "    color:            rgb(255,195,195);\n",
-       "    background-color: rgb(0,0,0);\n",
-       "    font-size:    110%;\n",
-       "    margin-left:   2px;\n",
-       "    margin-right:  2px;\n",
-       "    font-weight:   650;\n",
-       "}\n",
-       "\n",
-       ".text_cell_render tt {\n",
-       "    font-size:    120%;\n",
-       "    margin-left:   2px;\n",
-       "    margin-right:  2px;\n",
-       "    font-weight:   150;\n",
-       "}\n",
-       "\n",
-       ".Codemirror {\n",
-       "    font-family: \"PT Mono\";\n",
-       "    font-size: 100%;\n",
-       "}\n",
-       "\n",
-       "</style>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.core.display import HTML\n",
-    "with open('style.css') as file:\n",
-    "    css = file.read()\n",
-    "HTML(css)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +330,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (a → b) ↔ (¬a ∧ ¬b) is:\n",
-      "{{'a', ('¬', 'b')}, {('¬', 'b')}, {('¬', 'b'), ('¬', 'a')}}\n"
+      "{{('¬', 'b')}, {('¬', 'a'), ('¬', 'b')}, {'a', ('¬', 'b')}}\n"
      ]
     }
    ],
@@ -467,43 +340,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of (p ∧ q → r) ∨ ¬r → ¬p is:\n",
-      "{{'r', ('¬', 'p')}, {('¬', 'r'), ('¬', 'p')}, {'q', ('¬', 'p')}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('(p ∧ q → r) ∨ ¬r → ¬p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of ⊤ is:\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('⊤')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "The knf of (p → q) ↔ (¬p → ¬q) is:\n",
-      "{{('¬', 'q'), 'p'}, {'q', ('¬', 'p')}}\n"
+      "{{'q', ('¬', 'p')}, {('¬', 'q'), 'p'}}\n"
      ]
     }
    ],
@@ -539,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -557,61 +412,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of ¬ r ∧ ( q ∨ p → r ) → ¬ q ∧ ¬ p is:\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('¬ r ∧ ( q ∨ p → r ) → ¬ q ∧ ¬ p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of p ∨ q → r is:\n",
-      "{{'r', ('¬', 'q')}, {'r', ('¬', 'p')}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('p ∨ q → r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of p ∨ q ↔ r is:\n",
-      "{{'r', ('¬', 'q')}, {'r', ('¬', 'p')}, {'q', ('¬', 'r'), 'p'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('p ∨ q ↔ r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +450,7 @@
        " ('∨', ('∨', 'p', 'q'), 'z'))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -652,53 +480,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of p ∨ ¬p is:\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('p ∨ ¬p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The knf of ¬r ∧ (q ∨ p → r) → ¬q ∧ ¬p is:\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test('¬r ∧ (q ∨ p → r) → ¬q ∧ ¬p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{frozenset({'c', 'a', 'b'})}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def atLeastOne(M):\n",
     "    return { frozenset(M) }\n",
@@ -708,10 +510,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('→', 'r', ('→', 'q', ('→', 's', 'd')))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'r → q → s → d'\n",
+    "\n",
+    "plp.LogicParser(s).parse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The knf of r → q → (q ∨ r) → d is:\n",
+      "{{('¬', 'q'), ('¬', 'r'), 'd'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test('r → q → (q ∨ r) → d')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test('¬r ∧ ((q ∨ p) → r) → (¬q ∧ ¬p)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test('(l ∨ r → a) ∧ a ∧ ¬l → r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test('(r → p ∨ q) → ¬q ∨ ¬p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plp.LogicParser(s).parse()"
+   ]
   }
  ],
  "metadata": {
